--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 							We specialize in <strong>high-quality </strong> graphic design, printing and branding solutions.
 						</p>
 						<div class="link-group">
-							<a class="btn-main" href="#">Contact Us</a>
+							<a class="btn-main" href="#contact-section">Contact Us</a>
 							<ul class="hero-social list-inline">
 								<li class="list-inline-item"><a href="#"><i class="fab fa-facebook-f"></i></a></li>
 								<li class="list-inline-item"><a href="#"><i class="fab fa-instagram"></i></a></li>
@@ -206,7 +206,7 @@
 					</div>
 				</div>
 				<div class="col-xl-6 content-block" data-aos="fade-right" data-aos-delay="400" data-aos-duration="2000">
-					<h2><span>About Us</span>We are a designing printing and branding company</h2>
+					<h2><span>About Us</span>We are a designing, printing and branding company</h2>
 					<p>
 						Roman Media Graphics Limited is a Ugandan company specializing in commercial printing, graphics design, and general supplies. 
 						We offer unique solutions for businesses and organizations, catering to education institutions,
@@ -350,8 +350,8 @@
 					<div class="box">
 			            <img src="image/portfolio/portfolio-item-02.jpg" alt="portfolio image">
 			            <div class="box-content">
-			            		<span class="category">Development</span>
-			                <h3 class="title">Come on babe light my fire</h3>
+			            		<span class="category">Digital</span>
+			                <h3 class="title">Branding for ABC Corporation</h3>
 			            </div>
 
 
