--- a/index.html
+++ b/index.html
@@ -296,10 +296,8 @@
 					<div class="box">
 			            <img src="image/portfolio/portfolio-item-01.jpg" alt="portfolio image">
 			            <div class="box-content">
-			            		<span class="category">Graphics designing</span>
-			                <h3 class="title">We create stunning visuals, 
-								from logos business cards, flyers to banners that make your brand 
-								stand out and captivate your audience.</h3>
+			            		<span class="category">Service</span>
+			                <h3 class="title">Graphics designing</h3>
 			            </div>
 			            <div class="icon-box"><a href="#" data-bs-toggle="modal" data-bs-target="#portfolioModal6"><i class="bi bi-plus-lg"></i></a></div>
 
@@ -350,8 +348,8 @@
 					<div class="box">
 			            <img src="image/portfolio/portfolio-item-02.jpg" alt="portfolio image">
 			            <div class="box-content">
-			            		<span class="category">Digital</span>
-			                <h3 class="title">Branding for ABC Corporation</h3>
+			            		<span class="category">Service</span>
+			                <h3 class="title">Digital Printing</h3>
 			            </div>
 
 
@@ -404,8 +402,8 @@
 					<div class="box">
 			            <img src="image/portfolio/portfolio-item-03.jpg" alt="portfolio image">
 			            <div class="box-content">
-			            	<span class="category">Design</span>
-			                <h3 class="title">When the musics over turn off the light</h3>
+			            	<span class="category">Service</span>
+			                <h3 class="title">UV Printing</h3>
 			            </div>
 			            <div class="icon-box"><a href="#" data-bs-toggle="modal" data-bs-target="#portfolioModal4"><i class="bi bi-plus-lg"></i></a></div>
 
@@ -456,8 +454,8 @@
 					<div class="box">
 			            <img src="image/portfolio/portfolio-item-04.jpg" alt="portfolio image">
 			            <div class="box-content">
-			            		<span class="category">Application</span>
-			                <h3 class="title">She's got a smile that seems to me</h3>
+			            		<span class="category">Service</span>
+			                <h3 class="title">Large Format Printing</h3>
 			            </div>
 			            <div class="icon-box"><a href="#" data-bs-toggle="modal" data-bs-target="#portfolioModal3"><i class="bi bi-plus-lg"></i></a></div>
 
@@ -508,8 +506,8 @@
 					<div class="box">
 			            <img src="image/portfolio/portfolio-item-05.jpg" alt="portfolio image">
 			            <div class="box-content">
-			            		<span class="category">Programming</span>
-			                <h3 class="title">So close no matter how far</h3>
+			            		<span class="category">Service</span>
+			                <h3 class="title">DTF Printing</h3>
 			            </div>
 			            <div class="icon-box"><a href="#" data-bs-toggle="modal" data-bs-target="#portfolioModal2"><i class="bi bi-plus-lg"></i></a></div>
 
@@ -560,8 +558,8 @@
 					<div class="box">
 			            <img src="image/portfolio/portfolio-item-06.jpg" alt="portfolio image">
 			            <div class="box-content">
-			            		<span class="category">Development</span>
-			                <h3 class="title">When you are stranger faces looks ugly</h3>
+			            		<span class="category">Service</span>
+			                <h3 class="title">Engraving</h3>
 			            </div>
 			            <div class="icon-box"><a href="#" data-bs-toggle="modal" data-bs-target="#portfolioModal1"><i class="bi bi-plus-lg"></i></a></div>
 
@@ -1399,11 +1397,11 @@
 			<div class="row">
 				<div class="col-lg-6" data-aos="fade-right" data-aos-duration="1000" data-aos-delay="600">
 					<div class="map-wrapper" id="mapwrapper">
-						<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3989.759537772152!2d32.57893248498348!3d0.
+						<!-- <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3989.759537772152!2d32.57893248498348!3d0.
 							3110182632409475!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x177dbd4af3efda7b%3A0xaca435a651a7833!2s
 							Bunkeddeko%20Complex!5e0!3m2!1sen!2sug!4v1724494452458!5m2!1sen!2sug" width="90%" height="450" style="border:0; margin: 0%,10%,20%;" 
 							loading="lazy" referrerpolicy="no-referrer-when-downgrade">
-						</iframe> 
+						</iframe>  -->
 					</div>
 				</div>
 				<div class="col-lg-6 form-block" data-aos="fade-right" data-aos-duration="1500" data-aos-delay="1100">
