--- a/index.html
+++ b/index.html
@@ -826,7 +826,7 @@
 								<img src="image/quote-icon.png" alt="quote icon">
 							</div>
 							<p>
-								"I’ve worked with many design companies, but [Your Company Name] stands out for their creativity and professionalism. 
+								"I’ve worked with many design companies, but Roman Media stands out for their creativity and professionalism. 
 								They helped me create beautiful promotional materials for my events, and their printing quality was top-notch. I’ll definitely be back for future projects!"
 							</p>
 							<div class="quote-author d-flex align-items-center justify-content-center">
