--- a/index.html
+++ b/index.html
@@ -760,7 +760,7 @@
 				<h2>Testimonials</h2>
 				<p class="lead">
 					At Roman Media , our clients' success stories inspire us every day.
-					Here’s what some of our valued customers have to say about their experiences working with us:
+					Here’s what some of our valued customers have to say.
 				</p>
 			</div><!-- .section-title -->
 			<div class="testimonial-carousel swiper">
