--- a/index.html
+++ b/index.html
@@ -759,7 +759,7 @@
 			<div class="section-title dark">
 				<h2>Testimonials</h2>
 				<p class="lead">
-					At Roman Media , our clients' success stories inspire us every day.
+					our clients' success stories inspire us every day.
 					Here’s what some of our valued customers have to say.
 				</p>
 			</div><!-- .section-title -->
