--- a/index.html
+++ b/index.html
@@ -1409,7 +1409,7 @@
 					<div class="form-message">
 						<p></p>
 					</div>
-					<form class="row g-3" id="fungi-contact" method="POST" action="php/form-handler.php">
+					<form class="row g-3" id="fungi-contact" method="POST" action="send_email.php">
 						<div class="col-md-6">
 							<div class="input-group mb-3">
 								<label for="inputName" class="form-label visually-hidden">Name</label>
