--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
 			<div class="row grid" data-aos="fade-up" data-aos-duration="2000">
 				<div class="col-lg-4 col-md-6 grid-item programming">
 					<div class="box">
-			            <img src="image/portfolio/portfolio-item-01.jpg" alt="portfolio image">
+			            <img src="image/portfolio/uv pics-01.png" alt="portfolio image">
 			            <div class="box-content">
 			            		<span class="category">Service</span>
 			                <h3 class="title">Graphics designing</h3>
@@ -347,7 +347,7 @@
 				</div>
 				<div class="col-lg-4 col-md-6 grid-item development application">
 					<div class="box">
-			            <img src="image/portfolio/portfolio-item-02.jpg" alt="portfolio image">
+			            <img src="image/portfolio/large format pics-01.png" alt="portfolio image">
 			            <div class="box-content">
 			            		<span class="category">Service</span>
 			                <h3 class="title">Digital Printing</h3>
@@ -401,7 +401,7 @@
 				</div>
 				<div class="col-lg-4 col-md-6 grid-item application programming design">
 					<div class="box">
-			            <img src="image/portfolio/portfolio-item-03.jpg" alt="portfolio image">
+			            <img src="image/portfolio/dtf pics-01.png" alt="portfolio image">
 			            <div class="box-content">
 			            	<span class="category">Service</span>
 			                <h3 class="title">UV Printing</h3>
@@ -453,7 +453,7 @@
 				</div>
 				<div class="col-lg-4 col-md-6 grid-item design application">
 					<div class="box">
-			            <img src="image/portfolio/portfolio-item-04.jpg" alt="portfolio image">
+			            <img src="image/portfolio/dtf pics-02.png" alt="portfolio image">
 			            <div class="box-content">
 			            		<span class="category">Service</span>
 			                <h3 class="title">Large Format Printing</h3>
@@ -505,7 +505,7 @@
 				</div>
 				<div class="col-lg-4 col-md-6 grid-item programming design">
 					<div class="box">
-			            <img src="image/portfolio/portfolio-item-05.jpg" alt="portfolio image">
+			            <img src="image/portfolio/uv pics-02.png" alt="portfolio image">
 			            <div class="box-content">
 			            		<span class="category">Service</span>
 			                <h3 class="title">DTF Printing</h3>
@@ -557,7 +557,7 @@
 				</div>
 				<div class="col-lg-4 col-md-6 grid-item development design">
 					<div class="box">
-			            <img src="image/portfolio/portfolio-item-06.jpg" alt="portfolio image">
+			            <img src="image/portfolio/large format pics-02.png" alt="portfolio image">
 			            <div class="box-content">
 			            		<span class="category">Service</span>
 			                <h3 class="title">Engraving</h3>
@@ -1413,20 +1413,20 @@
 						<div class="col-md-6"></div>
 							<div class="input-group mb-3">
 								<label for="inputName" class="form-label visually-hidden">Name</label>
-								<input type="text" id="name" name="name" required>
+								<input type="text"  class="form-control" id="name" name="name" required>
 	   						</div>
 	   					</div>
 	   					<div class="col-md-6">
 
 	   						<div class="input-group mb-3">
 								<label for="inputEmail" class="form-label visually-hidden">Email</label>
-								<input type="email" id="email" name="email" required>
+								<input type="email" class="form-control" id="email" name="email" required>
 	   						</div>
 
 						</div>
 						<div class="col-md-12">
 							<label for="inputMessage" class="form-label visually-hidden">Message</label>
-							<textarea id="message" name="message" required></textarea>
+							<textarea class="form-control mb-3" id="message" name="message" required></textarea>
 	   						<button type="submit" class="btn btn-main" name="submit">Send Message</button>
 						</div>
 						<!-- <div class="col-md-6">
