--- a/index.html
+++ b/index.html
@@ -12,9 +12,12 @@
 	<!-- Icons -->
 	<!-- <link rel="stylesheet" type="text/css" href="css/pe-icon-7-stroke.css">
 	<link rel="stylesheet" type="text/css" href="css/pe-helper.css">
-	<link rel="stylesheet" href="css/bootstrap-icons.css">
-	<link rel="stylesheet" type="text/css" href="css/all.min.css"> -->
+	<link rel="stylesheet" href="css/bootstrap-icons.css"> -->
+	<link rel="stylesheet" type="text/css" href="css/all.min.css">
 	<link rel="stylesheet" href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
+	 integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" 
+	 crossorigin="anonymous" referrerpolicy="no-referrer" />
 
 	<!-- Fonts -->
 	<link rel="preconnect" href="https://fonts.googleapis.com">
@@ -118,8 +121,10 @@
 						<div class="link-group">
 							<a class="btn-main" href="#contact-section">Contact Us</a>
 							<ul class="hero-social list-inline">
-								<li class="list-inline-item"><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-								<li class="list-inline-item"><a href="#"><i class="fab fa-instagram"></i></a></li>
+								<li class="list-inline-item"><a href="https://www.facebook.com/romanmediagraphics?mibextid=ZbWKwL"><i class="fab fa-facebook-f"></i></a></li>
+								<li class="list-inline-item"><a href="https://www.instagram.com/romanmedia_graphics_print?igsh=MXFsY2Nndm5uYzk2bQ=="><i class="fab fa-instagram"></i></a></li>
+								<li class="list-inline-item"><a href="https://www.tiktok.com/@roman_media.graphics?_t=8oixh4Rdmrt&_r=1"><i class='bx bxl-tiktok' ></i></a></li>
+						
 							</ul> <!-- .hero-social -->
 						</div> <!-- .link-group -->
 					</div> <!-- .content-block -->
@@ -708,7 +713,7 @@
 					<ul class="features-list">
 						<li class="d-flex align-items-start">
 							<div class="icon-block">
-								<div class="icon-box"><i class="pe-7s-umbrella"></i></div>
+								<div class="icon-box"><i class="fa-solid fa-people-group"></i></div>
 							</div>
 							<div class="content-wrapper">
 								<h4>Expert Team</h4>
@@ -722,7 +727,7 @@
 						</li>
 						<li class="d-flex align-items-start">
 							<div class="icon-block">
-								<div class="icon-box"><i class="pe-7s-box2"></i></div>
+								<div class="icon-box"><i class="fa-solid fa-bullseye"></i></div>
 							</div>
 							<div class="content-wrapper">
 								<h4>Tailored Solutions</h4>
@@ -736,7 +741,7 @@
 						</li>
 						<li class="d-flex align-items-start">
 							<div class="icon-block">
-								<div class="icon-box"><i class="pe-7s-refresh-2"></i></div>
+								<div class="icon-box"><i class="fa-solid fa-medal"></i></div>
 							</div>
 							<div class="content-wrapper">
 								<h4>Commitment to Quality</h4>
