--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
 			            <img src="image/portfolio/uv pics-01.png" alt="portfolio image">
 			            <div class="box-content">
 			            		<span class="category">Service</span>
-			                <h3 class="title">Graphics designing</h3>
+			                <h3 class="title">UV Printing</h3>
 			            </div>
 			            <div class="icon-box"><a href="#" data-bs-toggle="modal" data-bs-target="#portfolioModal6"><i class="fa-solid fa-up-right-and-down-left-from-center"></i></a></div>
 
@@ -343,7 +343,7 @@
 			            <img src="image/portfolio/large format pics-01.png" alt="portfolio image">
 			            <div class="box-content">
 			            		<span class="category">Service</span>
-			                <h3 class="title">Digital Printing</h3>
+			                <h3 class="title">Lage Format Printing</h3>
 			            </div>
 
 
@@ -387,7 +387,7 @@
 			            <img src="image/portfolio/dtf pics-01.png" alt="portfolio image">
 			            <div class="box-content">
 			            	<span class="category">Service</span>
-			                <h3 class="title">UV Printing</h3>
+			                <h3 class="title">DTF Printing</h3>
 			            </div>
 			            <div class="icon-box"><a href="#" data-bs-toggle="modal" data-bs-target="#portfolioModal4"><i class="fa-solid fa-up-right-and-down-left-from-center"></i></a></div>
 
@@ -429,7 +429,7 @@
 			            <img src="image/portfolio/dtf pics-02.png" alt="portfolio image">
 			            <div class="box-content">
 			            		<span class="category">Service</span>
-			                <h3 class="title">Large Format Printing</h3>
+			                <h3 class="title">DTF Printing</h3>
 			            </div>
 			            <div class="icon-box"><a href="#" data-bs-toggle="modal" data-bs-target="#portfolioModal3"><i class="fa-solid fa-up-right-and-down-left-from-center"></i></a></div>
 
@@ -471,7 +471,7 @@
 			            <img src="image/portfolio/uv pics-02.png" alt="portfolio image">
 			            <div class="box-content">
 			            		<span class="category">Service</span>
-			                <h3 class="title">DTF Printing</h3>
+			                <h3 class="title">UV Printing</h3>
 			            </div>
 			            <div class="icon-box"><a href="#" data-bs-toggle="modal" data-bs-target="#portfolioModal2"><i class="fa-solid fa-up-right-and-down-left-from-center"></i></a></div>
 
@@ -513,7 +513,7 @@
 			            <img src="image/portfolio/large format pics-02.png" alt="portfolio image">
 			            <div class="box-content">
 			            		<span class="category">Service</span>
-			                <h3 class="title">Engraving</h3>
+			                <h3 class="title">Large Format Printing</h3>
 			            </div>
 			            <div class="icon-box"><a href="#" data-bs-toggle="modal" data-bs-target="#portfolioModal1"><i class="fa-solid fa-up-right-and-down-left-from-center"></i></a></div>
 
@@ -560,7 +560,7 @@
 			            <img src="image/portfolio/uv pics-03.png" alt="portfolio image">
 			            <div class="box-content">
 			            		<span class="category">Service</span>
-			                <h3 class="title">Graphics designing</h3>
+			                <h3 class="title">Digital Printing</h3>
 			            </div>
 			            <div class="icon-box"><a href="#" data-bs-toggle="modal" data-bs-target="#portfolioModal6"><i class="fa-solid fa-up-right-and-down-left-from-center"></i></a></div>
 
@@ -603,7 +603,7 @@
 			            <img src="image/portfolio/large format pics-05.png" alt="portfolio image">
 			            <div class="box-content">
 			            		<span class="category">Service</span>
-			                <h3 class="title">Digital Printing</h3>
+			                <h3 class="title">Large Format Printing</h3>
 			            </div>
 
 
@@ -647,7 +647,7 @@
 			            <img src="image/portfolio/dtf pics-03.png" alt="portfolio image">
 			            <div class="box-content">
 			            	<span class="category">Service</span>
-			                <h3 class="title">UV Printing</h3>
+			                <h3 class="title">DTF Printing</h3>
 			            </div>
 			            <div class="icon-box"><a href="#" data-bs-toggle="modal" data-bs-target="#portfolioModal4"><i class="fa-solid fa-up-right-and-down-left-from-center"></i></a></div>
 
@@ -731,7 +731,7 @@
 			            <img src="image/portfolio/uv pics-06.png" alt="portfolio image">
 			            <div class="box-content">
 			            		<span class="category">Service</span>
-			                <h3 class="title">DTF Printing</h3>
+			                <h3 class="title">UV Printing</h3>
 			            </div>
 			            <div class="icon-box"><a href="#" data-bs-toggle="modal" data-bs-target="#portfolioModal2"><i class="fa-solid fa-up-right-and-down-left-from-center"></i></i></a></div>
 
@@ -773,7 +773,7 @@
 			            <img src="image/portfolio/large format pics-03.png" alt="portfolio image">
 			            <div class="box-content">
 			            		<span class="category">Service</span>
-			                <h3 class="title">Engraving</h3>
+			                <h3 class="title">Large Format Printing</h3>
 			            </div>
 			            <div class="icon-box"><a href="#" data-bs-toggle="modal" data-bs-target="#portfolioModal1"><i class="fa-solid fa-up-right-and-down-left-from-center"></i></a></div>
 
