--- a/index.html
+++ b/index.html
@@ -1081,11 +1081,11 @@
 						        			<li><i class="fa-solid fa-clock"></i></i> 10 min</li>
 						        		</ul>
 						        		<p>
-						        			In the bustling city of Central, Uganda, a small design studio buzzed with creativity. This is where our story begins, 
+						        			In the bustling city of Kampala, Uganda, a small design studio buzzed with creativity. This is where our story begins, 
 											with a talented graphic designer named Alex, who was about to embark on a transformative journey from concept to creation.
 						        		</p>
 						        		<p>
-						        			The Spark of an Idea <br>
+						        		 <strong>The Spark of an Idea</strong> <br>
 											One sunny morning, Alex received a call from a new client, a local coffee shop looking to rebrand.
  											The client wanted a fresh, modern look that would attract more customers. Excited by the challenge, 
 											Alex began the process of conceptualization. He spent hours researching industry trends, studying 
@@ -1093,7 +1093,7 @@
  											he created a mood board filled with warm colors, sleek typography, and inspiring images.
 						        		</p>
 						        		<p>
-						        			Bringing the Vision to Life <br>
+						        			<strong>Bringing the Vision to Life</strong> <br>
 											With the concept solidified, Alex moved on to the design phase. He sketched out several logo ideas, 
 											experimenting with different shapes and symbols that represented the essence of the coffee shop. 
 											After numerous drafts, he settled on a design featuring a stylized coffee cup with steam forming the
@@ -1107,7 +1107,7 @@
 
 						        		</p>
 						        		<p>
-						        			Refining the Design <br>
+						        			<strong>Refining the Design</strong> <br>
 											Alex presented his designs to the client, eagerly awaiting their feedback. 
 											The client loved the overall concept but suggested a few tweaks to the logo and color scheme. 
 											Alex took these suggestions to heart and made the necessary adjustments, refining the design until 
@@ -1115,7 +1115,7 @@
 											thrilled with the new brand identity.
 						        		</p>
 										<p>
-											From Digital to Physical <br>
+											<strong>From Digital to Physical</strong> <br>
 											With the design finalized, it was time to bring it to life through printing. 
 											Alex carefully selected high-quality materials that would enhance the brand’s image. 
 											He chose a textured paper for the business cards, giving them a premium feel, and opted for
@@ -1123,21 +1123,21 @@
 											ensure that every detail was perfect, from the color accuracy to the finishing touches	
 										</p>
 										<p>
-											Launching the Brand <br>
+											<strong>Launching the Brand</strong> <br>
 											The big day arrived, and the coffee shop’s new brand was unveiled to the public. The launch was a huge success, 
 											with customers raving about the fresh, modern look. The new branding 
 											helped the coffee shop stand out in a crowded market, attracting more customers and boosting sales.
 											Alex’s hard work had paid off, and he felt a deep sense of satisfaction seeing his designs come to life
 										</p>
 										<p>
-											Maintaining and Evolving <br>
+											<strong>Maintaining and Evolving</strong> <br>
 											But the journey didn’t end there. Alex continued to work with the coffee shop,
  											ensuring that their brand remained consistent across all platforms. 
  											He designed social media graphics, updated the website, and created promotional materials for special events.
 											As the coffee shop grew, so did its brand, evolving to stay relevant and competitive.
 										</p>
 										<p>
-											Conclusion <br>
+											<strong>Conclusion</strong> <br>
 											From the initial spark of an idea to the final printed product, the journey of graphic design, printing, 
 											and branding is a complex and rewarding process. It requires a blend of creativity, technical skill, and strategic thinking to create a 
 											brand that not only stands out but also resonates with its audience. Through dedication and collaboration, designers like Alex can transform
@@ -1194,25 +1194,63 @@
 							        		<div class="content-wrapper">
 								        		<h2 class="blog-title">Designing from scratch</h2>
 								        		<ul class="blog-meta d-md-flex align-items-center justify-content-md-center">
-								        			<li><a href="#"><i class="fa-regular fa-folder-open"></i> Javascript</a></li>
+								        			<li><a href="#"><i class="fa-regular fa-folder-open"></i> A Journey in Design, Printing, and Branding</a></li>
 								        			<li><i class="fa-solid fa-calendar-days"></i> October 21, 2023</li>
 								        			<li><i class="fa-solid fa-clock"></i> 10 min</li>												
 								        		</ul>
 								        		<p>
-								        			Sed vitae nulla eu velit fringilla hendrerit. Fusce luctus rhoncus blandit. Nulla vel varius felis. Integer felis urna, auctor hendrerit ante vitae, scelerisque bibendum quam. Proin libero leo, pulvinar nec iaculis ac, sodales nec tellus. Sed ut suscipit erat. Integer aliquam erat eget hendrerit ultricies. In pharetra eu ante consequat tincidunt. Curabitur vulputate ligula risus, ac auctor magna vulputate sit amet. Sed finibus neque neque, euismod porta felis vehicula at. Donec a sem id augue sagittis tincidunt non sit amet risus.
+								        			Embarking on a journey to create a design from scratch can be both exhilarating and daunting. Whether you’re a seasoned designer or a novice, 
+													the process of bringing a vision to life involves creativity, technical skills, and a deep understanding of branding. Let’s dive into the world 
+													of graphic design, printing, and branding, and explore how to create something truly unique from the ground up.
 								        		</p>
 								        		<p>
-								        			Duis aute irure dolor in reprehenderit in voluptate velit esse
-								        			cillum dolore eu fugiat nulla pariatur. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+								        			<strong>The Spark of an Idea</strong> <br>
+													Every great design starts with an idea. This could be a fleeting thought, a sketch on a napkin, or a detailed concept. 
+													The key is to capture this spark and nurture it. Begin by asking yourself: What message do I want to convey? Who is my audience? What emotions should
+													 my design evoke? Answering these questions will help you lay the foundation for your project.
 								        		</p>
 								        		<p>
-								        			Duis aute irure dolor in reprehenderit in voluptate velit esse
-								        			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+													<strong>Sketching and Conceptualizing</strong> <br>
+								        			Before jumping into digital tools, take some time to sketch your ideas. This step is crucial as it allows you to explore different layouts, elements, and
+													 styles without the constraints of software. Sketching helps in visualizing the overall composition and refining your concept. Remember, your sketches 
+													 don’t have to be perfect—they’re just a way to brainstorm and iterate.
 								        		</p>
 								        		<p>
-								        			Vestibulum aliquet pulvinar neque sed ullamcorper. Ut vitae fringilla ex. Nam id dui dignissim, maximus ligula id, tempus metus. Sed commodo dui vitae dui pulvinar, eu dignissim turpis luctus. Mauris consectetur leo est, non finibus tellus posuere quis. Integer mollis felis a tristique facilisis. Nam convallis est id iaculis mattis.
+													<strong>Choosing the Right Tools</strong> <br>
+								        			Once you have a clear vision, it’s time to bring your design to life using graphic design software. Tools like Adobe Illustrator, Photoshop, and 
+													Canva are popular choices. Each tool has its strengths, so choose one that best fits your needs. 
+													For instance, Illustrator is great for vector graphics, while Photoshop excels in photo editing and manipulation
 								        		</p>
-								        		
+								        		<p>
+													<strong>Designing with Purpose</strong> <br>
+								        			As you start designing, keep your brand’s identity in mind. Consistency is key in branding, so use your brand’s colors, fonts, 
+													and style guidelines. Pay attention to the balance, contrast, and alignment of elements. These principles ensure that your design 
+													is visually appealing and communicates your message effectively.
+								        		</p>
+												<p>
+													<strong>Preparing for Print</strong> <br>
+								        			Designing for print involves additional considerations compared to digital design. 
+													Ensure your design is in the correct color mode (CMYK for print), and set the appropriate resolution (usually 300 DPI). 
+													Bleed and margin settings are also crucial to avoid any unwanted white borders or cut-off elements.
+													Collaborate with your printer to understand their requirements and get a proof before the final print run
+								        		</p>
+												<p>
+													<strong>Building a Brand Story</strong> <br>
+								        			Your design is more than just visuals; it’s a part of your brand’s story. A compelling brand story connects with your audience 
+													on an emotional level. It should reflect your brand’s values, mission, and the unique value you offer. Crafting a brand
+													story involves understanding your audience’s pain points and showing how your brand provides a solution
+								        		</p>
+												<p>
+													<strong>Final Touches and Feedback</strong> <br>
+								        			Before finalizing your design, seek feedback from peers or clients. Constructive criticism can provide new perspectives
+													and help you refine your work. Make necessary adjustments and ensure every detail aligns with your initial vision.
+								        		</p>
+												<p>
+													<strong>Conclusion</strong> <br>
+								        			Designing from scratch is a rewarding process that combines creativity, technical skills, and strategic thinking. 
+													By following these steps, you can create designs that not only look great but also resonate with your audience and 
+													strengthen your brand. Remember, every design project is a learning experience, so embrace the journey and keep honing your craft.
+								        		</p>
 							        		</div>
 							        	</div>
 
@@ -1255,50 +1293,58 @@
 							        	</div>
 							        	<div class="col-xl-8 offset-xl-2">
 							        		<div class="content-wrapper">
-								        		<h2 class="blog-title">Javascript algorythm and data structure for beginner</h2>
+								        		<h2 class="blog-title">Break on Through to the Other Side</h2>
 								        		<ul class="blog-meta d-md-flex align-items-center justify-content-md-center">
 								        			<li><a href="#"><i class="fa-regular fa-folder-open"></i>  Javascript</a></li>
 								        			<li><i class="bi bi-calendar3"></i> October 21, 2021</li>
 								        			<li><i class="bi bi-clock"></i> 10 min</li>
 								        		</ul>
 								        		<p>
-								        			Sed vitae nulla eu velit fringilla hendrerit. Fusce luctus rhoncus blandit. Nulla vel varius felis. Integer felis urna, auctor hendrerit ante vitae, scelerisque bibendum quam. Proin libero leo, pulvinar nec iaculis ac, sodales nec tellus. Sed ut suscipit erat. Integer aliquam erat eget hendrerit ultricies. In pharetra eu ante consequat tincidunt. Curabitur vulputate ligula risus, ac auctor magna vulputate sit amet. Sed finibus neque neque, euismod porta felis vehicula at. Donec a sem id augue sagittis tincidunt non sit amet risus.
+													In the world of graphic design, printing, and branding, breaking through to the other side means pushing boundaries, embracing innovation, 
+													and creating something that truly stands out. This journey is not just about aesthetics; it’s about crafting a message that resonates and 
+													leaves a lasting impact. Let’s explore how you can break on through to the other side in your design projects
 								        		</p>
-								        		<p>
-								        			Duis aute irure dolor in reprehenderit in voluptate velit esse
-								        			cillum dolore eu fugiat nulla pariatur. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+												<p>
+													<strong>Embracing the Unknown</strong> <br>
+								        			Every design project starts with a blank canvas, a space filled with endless possibilities. This can be both exciting and intimidating. 
+													The key is to embrace the unknown and let your creativity flow. Start by brainstorming ideas without any limitations. Sketch out concepts, 
+													play with colors, and experiment with different styles. This initial phase is all about exploration and discovery.
 								        		</p>
-								        		<p>
-								        			Duis aute irure dolor in reprehenderit in voluptate velit esse
-								        			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+												<p>
+													<strong>Defining Your Brand Identity</strong> <br>
+								        			Before diving into the design process, it’s crucial to have a clear understanding of your brand identity. What does your brand stand for? 
+													What are its core values? Who is your target audience? Answering these questions will help you create a design that aligns with your brand’s 
+													message and appeals to your audience. Consistency in branding is essential, so make sure your design elements reflect your brand’s personality
 								        		</p>
-								        		<p>
-								        			Vestibulum aliquet pulvinar neque sed ullamcorper. Ut vitae fringilla ex. Nam id dui dignissim, maximus ligula id, tempus metus. Sed commodo dui vitae dui pulvinar, eu dignissim turpis luctus. Mauris consectetur leo est, non finibus tellus posuere quis. Integer mollis felis a tristique facilisis. Nam convallis est id iaculis mattis.
+												<p>
+													<strong>The Power of Visual Storytelling</strong> <br>
+								        			Graphic design is a powerful tool for storytelling. Through visuals, you can convey emotions, tell a story, and connect with your audience on a deeper level.
+													Use imagery, typography, and color schemes that evoke the right emotions and support your brand’s narrative. Remember, a picture is worth a thousand words,
+													so make sure your visuals speak volumes
 								        		</p>
-								        		<div class="post-footer row">
-								        			<div class="blog-tags col-lg-8 d-md-flex align-items-md-center">
-								        				<h4>Tags:</h4>
-								        				<ul class="tag-list list-inline">
-								        					<li class="list-inline-item"><a href="#">Web Design</a></li>
-								        					<li class="list-inline-item"><a href="#">Social Media</a></li>
-								        					<li class="list-inline-item"><a href="#">Application</a></li>
-								        				</ul>
-								        			</div>
-								        			<div class="blog-share col-lg-4 d-flex align-items-center justify-content-xxl-end">
-								        				<h4>Share:</h4>
-								        				<ul class="tag-list list-inline">
-								        					<li class="list-inline-item">
-								        						<a class="facebook-share" href="#"><i class="bi bi-facebook"></i></a>
-								        					</li>
-								        					<li class="list-inline-item">
-								        						<a class="twitter-share" href="#"><i class="bi bi-twitter"></i></a>
-								        					</li>
-								        					<li class="list-inline-item">
-								        						<a class="linkedin-share" href="#"><i class="bi bi-linkedin"></i></a>
-								        					</li>
-								        				</ul>
-								        			</div>
-								        		</div>
+												<p>
+													<strong>From Digital to Print</strong> <br>
+								        			Transitioning your design from digital to print involves careful planning and attention to detail. 
+													Ensure your design is in the correct color mode (CMYK for print) and has the appropriate resolution (300 DPI). Pay attention to bleed and margin settings to 
+													avoid any unwanted white borders or cut-off elements. Collaborate with your printer to understand their requirements and get a proof before the final print run.
+								        		</p>
+												<p>
+													<strong>Creating a Cohesive Brand Experience</strong> <br>
+								        			Branding is more than just a logo or a color scheme; it’s about creating a cohesive experience across all touchpoints. Whether it’s a business card, a brochure, or a website, 
+													every piece of your branding should work together to tell a unified story. Consistency in design elements, tone of voice, and messaging helps build trust and recognition with your audience..
+								        		</p>
+												<p>
+													<strong>Gathering Feedback and Iterating</strong> <br>
+								        			No design is perfect on the first try. Gathering feedback from peers, clients, or focus groups can provide valuable insights and help you refine your work. 
+													Be open to constructive criticism and use it to improve your design. Iteration is a crucial part of the design process, so don’t be afraid to make changes and try different approaches.
+								        		</p>
+												<p>
+													<strong>Conclusion</strong> <br>
+								        			Breaking through to the other side in graphic design, printing, and branding is about more than just creating beautiful visuals. It’s about crafting a message that resonates, pushing boundaries, 
+													and creating a cohesive brand experience. By embracing the unknown, defining your brand identity, and using the power of visual storytelling, you can create designs that leave a lasting impact
+								        		</p>
+
+								        		
 							        		</div>
 							        	</div>
 
@@ -1340,7 +1386,7 @@
 							        	</div>
 							        	<div class="col-xl-8 offset-xl-2">
 							        		<div class="content-wrapper">
-								        		<h2 class="blog-title">Javascript algorythm and data structure for beginner</h2>
+								        		<h2 class="blog-title">Break on Through to the Other Side</h2>
 								        		<ul class="blog-meta d-md-flex align-items-center justify-content-md-center">
 								        			<li><a href="#"><i class="bi bi-folder-fill"></i> Javascript</a></li>
 								        			<li><i class="bi bi-calendar3"></i> November 22, 2022</li>
