--- a/index.html
+++ b/index.html
@@ -1474,23 +1474,35 @@
 							        		<div class="content-wrapper">
 								        		<h2 class="blog-title">Big pictures For big brands</h2>
 								        		<ul class="blog-meta d-md-flex align-items-center justify-content-md-center">
-								        			<li><a href="#"><i class="bi bi-folder-fill"></i> Printing</a></li>
+								        			<li><a href="#"><i class="bi bi-folder-fill"></i>Mastering Large Format Printing</a></li>
 								        			<li><i class="bi bi-calendar3"></i> October 21, 2021</li>
 								        			<li><i class="bi bi-clock"></i> 10 min</li>
 								        		</ul>
 								        		<p>
-								        			Sed vitae nulla eu velit fringilla hendrerit. Fusce luctus rhoncus blandit. Nulla vel varius felis. Integer felis urna, auctor hendrerit ante vitae, scelerisque bibendum quam. Proin libero leo, pulvinar nec iaculis ac, sodales nec tellus. Sed ut suscipit erat. Integer aliquam erat eget hendrerit ultricies. In pharetra eu ante consequat tincidunt. Curabitur vulputate ligula risus, ac auctor magna vulputate sit amet. Sed finibus neque neque, euismod porta felis vehicula at. Donec a sem id augue sagittis tincidunt non sit amet risus.
+													In the competitive world of branding, large format printing plays a crucial role in making a big impact. Whether it’s for billboards, 
+													banners, or trade show displays, large format printing helps brands capture attention and convey their message effectively. 
+													Large format printing is all about making a statement. It allows brands to showcase their visuals on a grand scale, ensuring that their
+													message is seen from a distance. This is particularly important for outdoor advertising, where visibility is key. High-quality large format prints 
+													can turn heads and attract potential customers, making them an essential tool for any big brand
 								        		</p>
-								        		<p>
-								        			Duis aute irure dolor in reprehenderit in voluptate velit esse
-								        			cillum dolore eu fugiat nulla pariatur. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+												<p>
+													Quality is paramount when it comes to large format printing. Use high-resolution images to avoid pixelation and ensure sharp, clear prints. 
+													This is crucial for maintaining the integrity of your brand’s visuals. Ensure that your colors are consistent and accurate by working with a printer 
+													that uses advanced color management systems to match your brand’s color palette precisely. Choose the right materials for your prints, 
+													whether it’s vinyl, fabric, or paper, to ensure durability and suitability for the intended environment, whether indoor or outdoor.
 								        		</p>
-								        		<p>
-								        			Duis aute irure dolor in reprehenderit in voluptate velit esse
-								        			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+												<p>
+													Partnering with a reputable printer is essential for achieving high-quality large format prints. Look for a printer with experience 
+													in handling large projects and one that offers a range of printing options. Discuss your requirements in detail and request samples
+													to ensure they can meet your quality standards. Consistency is key in branding. Ensure that all your large format prints align with
+													your brand guidelines, including the correct logos, fonts, and colors. Consistent branding across all touchpoints helps build brand recognition and trust
 								        		</p>
-								        		<p>
-								        			Vestibulum aliquet pulvinar neque sed ullamcorper. Ut vitae fringilla ex. Nam id dui dignissim, maximus ligula id, tempus metus. Sed commodo dui vitae dui pulvinar, eu dignissim turpis luctus. Mauris consectetur leo est, non finibus tellus posuere quis. Integer mollis felis a tristique facilisis. Nam convallis est id iaculis mattis.
+												<p>
+													Large format printing isn’t just for billboards and banners. Big brands can use large format printing for trade show displays, 
+													creating eye-catching setups that draw visitors to their booths. Retail graphics can enhance store interiors with large wall graphics and window displays. 
+													Event signage, such as backdrops, stage graphics, and directional signs, can also benefit from large format printing. By focusing on quality, choosing the
+													right printer, and maintaining consistency in branding, big brands can create stunning visuals that capture attention and convey their message effectively. 
+													Whether it’s for advertising, events, or retail, large format printing is a powerful tool for any brand looking to make a big impression.
 								        		</p>
 								        		
 							        		</div>
