--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@
 			            <img src="image/portfolio/large format pics-01.png" alt="portfolio image">
 			            <div class="box-content">
 			            		<span class="category">Service</span>
-			                <h3 class="title">Lage Format Printing</h3>
+			                <h3 class="title">Large Format Printing</h3>
 			            </div>
 
 
