--- a/index.html
+++ b/index.html
@@ -68,9 +68,9 @@
 		        <li class="nav-item">
 		          <a class="nav-link" href="#portfolio-section">Service</a>
 		        </li>
-		        <!-- <li class="nav-item">
-		          <a class="nav-link" href="#service-section"></a>
-		        </li> -->
+		        <li class="nav-item">
+		          <a class="nav-link" href="#service-section">Promo Items</a>
+		        </li>
 		        <li class="nav-item">
 		          <a class="nav-link" href="#testimonial-section">Testimonials</a>
 		        </li>
@@ -894,6 +894,54 @@
 			<img class="de-service-3 elem-updown" src="image/design-elements/service-element-3.png" alt="service element 3">
 		</div> <!- .design-elements ->
 	</section> <!- service-section -->
+
+	 <!-- SERVICE SECTION  -->
+	<section class="service-section section-block" id="service-section">
+		<div class="container">
+			<div class="section-title dark">
+				<h2>Promotional Items</h2>
+				<p class="lead">
+					Explore our unique brandable items gallery at friendly prices.
+			
+				</p>
+			</div><!-- .section-title -->
+			<div class="promo-card-grid">
+    
+				<div class="promo-card">
+				   <img src="image/portfolio/uv pics-06.png" alt="Card Image 1" class="promo-card-image">
+					<div class="promo-card-content">
+					 <h2 class="promo-card-title">Glass Plaque</h2>
+					 <!-- <p class="promo-card-description">This is a description of card 1.</p> -->
+					</div>
+				</div>
+
+				<div class="promo-card">
+					<img src="image/portfolio/uv pics-06.png" alt="Card Image 1" class="promo-card-image">
+					 <div class="promo-card-content">
+					  <h2 class="promo-card-title">Glass Plaque</h2>
+					  <!-- <p class="promo-card-description">This is a description of card 1.</p> -->
+					 </div>
+				 </div>
+				 <div class="promo-card">
+					<img src="image/portfolio/uv pics-06.png" alt="Card Image 1" class="promo-card-image">
+					 <div class="promo-card-content">
+					  <h2 class="promo-card-title">Glass Plaque</h2>
+					  <!-- <p class="promo-card-description">This is a description of card 1.</p> -->
+					 </div>
+				 </div>
+				
+			</div>
+			
+		</div> <!-- .container -->
+		<div class="design-elements">
+			<img class="de-service-1 elem-updown" src="image/design-elements/service-element-1.png" alt="service element 1">
+			<img class="de-service-2 elem-updown" src="image/design-elements/service-element-2.png" alt="service element 2">
+			<img class="de-service-3 elem-updown" src="image/design-elements/service-element-3.png" alt="service element 3">
+		</div> <!-- .design-elements -->
+	</section> <!-- service-section -->
+
+
+
 
 	<!-- FEATURES SECTION -->
 	<section class="features-section section-block" id="features-section">
